--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.gitignore.io/api/node,linux,macos,windows,visualstudiocode
 one-on-ones.md
 .vscode
+randos.py
 
 ### Linux ###
 *~
