--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,10 @@ max_line_length = 119
 [*.html]
 indent_size = 2
 
+# Use 2 spaces for the CSS files
+[*.css]
+indent_size = 2
+
 # Use 2 spaces for the YML files
 [*.yml]
 indent_size = 2
